PokemonCard spacing fixed

--- a/src/components/Content/style.css
+++ b/src/components/Content/style.css
@@ -7,7 +7,7 @@
     flex-wrap: wrap;
     background-color: aliceblue;
     padding:10px;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
     /* max-width: 900px; */
     min-width: 70vw;
     max-width: 75vw;
